# mpc_planner

./: .gitignore  README.md  mpc_planner.perspective  pyproject.toml  requirements.txt  select_system.py  switch_to_ros.py
mpc-planner/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  package.xml  package1.xml  package2.xml
mpc-planner-dingo/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  README.md  package.xml  package1.xml  package2.xml
mpc-planner-dingo/config/: guidance_planner.yaml  settings.yaml
mpc-planner-dingo/launch/: ros1_simulator.launch  ros2_simulator.launch
mpc-planner-dingo/rviz/: ros1.rviz
mpc-planner-dingo/scripts/: generate_dingo_solver.py
mpc-planner-dingo/src/: ros1_planner.cpp  ros2_planner.cpp
mpc-planner-jackal/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  package.xml  package1.xml
mpc-planner-jackal/config/: guidance_planner.yaml  settings.yaml
mpc-planner-jackal/launch/: jackalsimulator.launch  ros1_jackal.launch  ros1_jackalsimulator.launch
mpc-planner-jackal/rviz/: default.rviz  ros1.rviz
mpc-planner-jackal/scripts/: generate_jackal_solver.py
mpc-planner-jackal/src/: jackal_planner.cpp  ros1_jackal.cpp  ros1_jackal_planner.cpp  ros1_planner.cpp  ros2_jackal_planner.cpp
mpc-planner-modules/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  package.xml  package1.xml  package2.xml
mpc-planner-modules/scripts/: contouring.py  ellipsoid_constraints.py  gaussian_constraints.py  goal_module.py  guidance_constraints.py  linearized_constraints.py  mpc_base.py  path_reference_velocity.py  scenario_constraints.py
mpc-planner-modules/src/: contouring.cpp  ellipsoid_constraints.cpp  gaussian_constraints.cpp  goal_module.cpp  guidance_constraints.cpp  linearized_constraints.cpp  mpc_base.cpp  path_reference_velocity.cpp  scenario_constraints.cpp
mpc-planner-solver/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  package.xml  package1.xml  package2.xml
mpc-planner-solver/src/: solver_interface.cpp  state.cpp
mpc-planner-solver/test/: test_solver.cpp
mpc-planner-types/: CMakeLists.txt  CMakeLists2.txt  package.xml  package1.xml
mpc-planner-util/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  package.xml
mpc-planner-util/src/: data_visualization.cpp  spline.cpp  visuals.cpp
mpc-planner-util/test/: test_spline.cpp
mpc-planner/src/: goal_module.cpp  mpc_base.cpp  planner.cpp
mpc_planner/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  package.xml  package1.xml  package2.xml
mpc_planner/src/: data_preparation.cpp  experiment_util.cpp  planner.cpp
mpc_planner_autoware/: CMakeLists.txt  CMakeLists2.txt  README.md  mpc_planner.perspective  package.xml  package2.xml
mpc_planner_autoware/cfg/: settings.cfg
mpc_planner_autoware/config/: ros2_guidance_planner.yaml  settings.yaml
mpc_planner_autoware/launch/: path_and_pedestrians.launch  ros2_autoware.launch
mpc_planner_autoware/rviz/: ros2.rviz
mpc_planner_autoware/scripts/: autotune.py  generate_autoware_solver.py
mpc_planner_autoware/src/: actuation.cpp  ros2_autoware.cpp  utils.cpp
mpc_planner_jackal/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  README.md  package.xml  package1.xml  package2.xml
mpc_planner_jackal/config/: guidance_planner.yaml  obstacles.yaml  settings.yaml
mpc_planner_jackal/launch/: ros1_jackal.launch  ros1_jackalsimulator.launch  ros2_jackalsimulator.launch
mpc_planner_jackal/rviz/: ros1.rviz
mpc_planner_jackal/scripts/: generate_jackal_solver.py
mpc_planner_jackal/src/: ros1_jackal.cpp  ros2_planner.cpp
mpc_planner_jackalsimulator/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  README.md  package.xml  package1.xml  package2.xml
mpc_planner_jackalsimulator/config/: guidance_planner.yaml  ros2_guidance_planner.yaml  settings.yaml
mpc_planner_jackalsimulator/launch/: ros1_jackalsimulator.launch  ros2_jackalsimulator.launch
mpc_planner_jackalsimulator/rviz/: hsignature.rviz  prm.rviz  ros1.rviz  ros1_2dcamera.rviz  ros1_3d.rviz  ros2.rviz
mpc_planner_jackalsimulator/scripts/: generate_jackalsimulator_solver.py
mpc_planner_jackalsimulator/src/: ros1_jackalsimulator.cpp  ros2_jackalsimulator.cpp
mpc_planner_modules/: CMakeLists.txt  CMakeLists2.txt  package.xml  package1.xml  package2.xml
mpc_planner_modules/scripts/: contouring.py  contouring_constraints.py  curvature_aware_contouring.py  decomp_constraints.py  ellipsoid_constraints.py  gaussian_constraints.py  goal_module.py  guidance_constraints.py  linearized_constraints.py  mpc_base.py  path_reference_velocity.py  scenario_constraints.py
mpc_planner_modules/src/: contouring.cpp  contouring_constraints.cpp  curvature_aware_contouring.cpp  decomp_constraints.cpp  ellipsoid_constraints.cpp  gaussian_constraints.cpp  goal_module.cpp  guidance_constraints.cpp  linearized_constraints.cpp  mpc_base.cpp  path_reference_velocity.cpp  scenario_constraints.cpp
mpc_planner_msgs/: CMakeLists.txt  CMakeLists2.txt  package.xml  package1.xml  package2.xml
mpc_planner_msgs/msg/: ObstacleArray.msg  ObstacleGMM.msg  gaussian.msg  obstacle_array.msg  obstacle_gmm.msg
mpc_planner_rosnavigation/: CMakeLists.txt  CMakeLists1.txt  README.md  mpc_planner_rosnavigation_plugin.xml  package.xml  package1.xml  package2.xml
mpc_planner_rosnavigation/config/: costmap_common_params.yaml  guidance_planner.yaml  ros2_guidance_planner.yaml  settings.yaml
mpc_planner_rosnavigation/launch/: odom_navigation_demo.launch  ros1_rosnavigation.launch
mpc_planner_rosnavigation/rviz/: ros1.rviz  ros1_3d.rviz
mpc_planner_rosnavigation/scripts/: generate_rosnavigation_solver.py  goal_publisher.py
mpc_planner_rosnavigation/src/: ros1_rosnavigation.cpp
mpc_planner_rosnavigation/worlds/: test.world
mpc_planner_solver/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  mpc_planner_solver-extras.cmake  package.xml  package1.xml  package2.xml  solver.cmake
mpc_planner_types/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  package.xml  package1.xml  package2.xml
mpc_planner_util/: CMakeLists.txt  CMakeLists2.txt  package.xml  package1.xml  package2.xml
(+150 files in other folders)
