<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc-planner-jackal</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="groot.oscar.de@gmail.com">r2c1</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mpc-planner</depend>
  <depend>mpc-planner-solver</depend>
  <depend>mpc-planner-util</depend>
  <depend>mpc-planner-types</depend>
  <depend>mpc_planner_msgs</depend>
  <depend>ros_tools</depend>

  <depend>nav_msgs</depend>
  <depend>derived_object_msgs</depend>

  <exec_depend>jackal_simulator</exec_depend>
  <exec_depend>roadmap</exec_depend>
  <exec_depend>pedestrian_simulator</exec_depend>
  <exec_depend>mobile_robot_state_publisher</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
