<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc-planner-modules</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="groot.oscar.de@gmail.com">r2c1</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mpc-planner-util</depend>
  <depend>mpc_planner_types</depend>
  <depend>mpc-planner-solver</depend>

  <!-- START SOLVER DEPENDENT -->
  <!-- END SOLVER DEPENDENT -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
