<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_planner_autoware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="groot.oscar.de@gmail.com">r2c1</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>mpc-planner</build_depend>
  <build_depend>mpc-planner-solver</build_depend>
  <build_depend>mpc-planner-modules</build_depend>
  <build_depend>mpc-planner-util</build_depend>
  <build_depend>mpc_planner_types</build_depend>
  <build_depend>mpc_planner_msgs</build_depend>
  <build_depend>ros_tools</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <build_depend>autoware_auto_planning_msgs</build_depend>
  <build_depend>autoware_auto_vehicle_msgs</build_depend>
  <build_depend>autoware_auto_perception_msgs</build_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pedestrian_simulator</exec_depend>
  <exec_depend>lanelets_to_path</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
