<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_planner_jackalsimulator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="groot.oscar.de@gmail.com">r2c1</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mpc-planner</depend>
  <depend>mpc_planner_msgs</depend>
  <depend>ros_tools</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>jackal_gazebo</exec_depend>
  <exec_depend>pedestrian_simulator</exec_depend>
  <exec_depend>roadmap</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
