<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_planner_modules</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="o.m.degroot@tudelft.nl">Oscar de Groot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mpc_planner_util</depend>
  <depend>mpc_planner_types</depend>
  <depend>mpc_planner_solver</depend>
  <depend>ros_tools</depend>

  <!-- START SOLVER DEPENDENT -->
	<depend>guidance_planner</depend>
  <!-- END SOLVER DEPENDENT -->

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
