<?xml version="1.0"?>
<package format="3">
  <name>mpc_planner_msgs</name>
  <version>0.0.0</version>
  <description>The mpc_planner_msgs package</description>

  <maintainer email="o.m.degroot@tudelft.nl">Oscar de Groot</maintainer>

  <license>TODO</license>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>