<?xml version="1.0"?>
<package format="2">
  <name>mpc_planner_msgs</name>
  <version>0.0.0</version>
  <description>Messages for usage with mpc_planner</description>

  <maintainer email="o.m.degroot@tudelft.nl">Oscar de Groot</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>roscpp</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>roscpp</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
