<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_planner_rosnavigation</name>
  <version>0.0.0</version>
  <description>ROS Navigation wrapper of MPC Planner</description>
  <maintainer email="o.m.degroot@tudelft.nl">Oscar de Groot</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mpc_planner</depend>
  <depend>mpc_planner_msgs</depend>
  <depend>mpc_planner_modules</depend>
  <depend>mpc_planner_solver</depend>
  <depend>mpc_planner_util</depend>
  <depend>mpc_planner_types</depend>
  <depend>ros_tools</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>nav_core</depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>costmap_converter</depend>

  <depend>nav_msgs</depend>

  <exec_depend>pedestrian_simulator</exec_depend>
  <exec_depend>jackal_gazebo</exec_depend>
  <exec_depend>jackal_navigation</exec_depend>
  <exec_depend>mobile_robot_state_publisher</exec_depend>
  <exec_depend>roadmap</exec_depend>

  <export>
    <nav_core plugin="${prefix}/mpc_planner_rosnavigation_plugin.xml"/>
    <build_type>catkin</build_type>
  </export>
</package>
